# surplus

./: .gitignore  .npmrc  .prettierignore  Cargo.toml  LICENSE  README.md  browser.mjs  build-wasm.sh  index.d.ts  node.cjs  package-lock.json  package.json
.github/: FUNDING.yml
.github/actions/publish-cratesio/: action.yaml
.github/actions/publish-npm/: action.yaml
.github/workflows/: publish-compiler.yaml  publish-esbuild.yaml  publish-rt.yaml  publish-s.yaml  push.yaml
compiler/: .gitignore  Cargo.toml  README.md  browser.mjs  index.d.ts  node.cjs  package.json
rt/: .prettierrc  README.md  index.mjs  package-lock.json  package.json
s/: .prettierrc  README.md  karma.conf.js  package-lock.json  package.json
s/bench/: benchNode.js
s/spec/: S.dispose.spec.js  S.exceptions.spec.js  S.freeze.spec.js  S.mutation.spec.js  S.on.spec.js  S.spec.js  S.subclock.spec.js
s/spec/support/: jasmine.json
s/src/: S.ts  withsubclocks.ts
src/: lib.rs  wasm.rs
surplus-compiler/: browser.mjs  index.d.ts  package.json
surplus-esbuild/: README.md  index.mjs  package.json
surplus-rt/: index.mjs  package.json
surplus-s/: README.md  package.json  tsconfig.json
surplus-s/bench/: bench.html  bench.js  benchNode.js
surplus-s/spec/: S.data.spec.js  S.makeComputationNode.spec.js  S.root.spec.js  S.sample.spec.js  S.subclock.spec.js  S.subcomputations.spec.js  S.value.spec.js
surplus-s/spec/support/: loadS.js
surplus-s/src/: S.ts  withsubclocks.ts
tests/: .gitignore  package.json  playwright.config.ts
tests/specs/: empty.spec.ts
