[package]
name = "surplus-compiler"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "surplus-transform"
path = "src/bin/surplus-transform.rs"

[dependencies]
oxc = "0.4.0"
oxc_codegen = "0.4.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.89"
