[package]
name = "surplus-compiler"
version = "0.1.0"
edition = "2021"
authors = ["Josh Junon (https://github.com/qix-)"]
description = "Surplus javascript framework core compiler transform"
readme = "README.md"
homepage = "https://github.com/surplus"
repository = "https://github.com/surplus/compiler"
license-file = "LICENSE"
keywords = [
	"surplus",
	"javascript",
	"framework",
	"compiler",
	"jsx"
]
categories = [
	"compilers",
	"development-tools",
	"parser-implementations",
	"wasm",
	"web-programming"
]
resolver = "2"
include = [
	"/src/**/*.rs",
	"/README.md",
	"/LICENSE",
	"/.github/FUNDING.yml",
	"/Cargo.toml",
]

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "surplus-transform"
path = "src/bin/surplus-transform.rs"

[dependencies]
oxc = "0.4.0"
oxc_codegen = "0.4.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.89"
